プロジェクト参照の追加

--- a/KoeBook.Core/KoeBook.Core.csproj
+++ b/KoeBook.Core/KoeBook.Core.csproj
@@ -12,5 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Epub\KoeBook.Epub\KoeBook.Epub.csproj" />
   </ItemGroup>
 </Project>
