--- a/KoeBook/KoeBook.csproj
+++ b/KoeBook/KoeBook.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KoeBook.Core\KoeBook.Core.csproj" />
+    <ProjectReference Include="..\Epub\KoeBook.Epub\KoeBook.Epub.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
