--- a/KoeBook/KoeBook.csproj
+++ b/KoeBook/KoeBook.csproj
@@ -15,7 +15,7 @@
     <EnableMsixTooling>true</EnableMsixTooling>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Components\Card.xaml" />
+    <None Remove="Components\Dialog\DialogContentControl.xaml" />
     <None Remove="Styles\Card.xaml" />
   </ItemGroup>
 
@@ -26,6 +26,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
     <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.0.240109" />
+    <PackageReference Include="FastEnum" Version="1.8.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231008000" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.9" />
@@ -41,10 +42,11 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Page Update="Styles\Card.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Update="Components\Dialog\DialogContentControl.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
     </Page>
-    <Page Update="Components\Card.xaml">
+    <Page Update="Styles\Card.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
