#27 モックの名前、位置の修正

--- a/KoeBook/appsettings.json
+++ b/KoeBook/appsettings.json
@@ -1,6 +1,10 @@
-﻿{
+{
     "LocalSettingsOptions": {
-      "ApplicationDataFolder": "KoeBook/ApplicationData",
-      "LocalSettingsFile": "LocalSettings.json"
+        "ApplicationDataFolder": "KoeBook/ApplicationData",
+        "LocalSettingsFile": "LocalSettings.json"
+    },
+    "MockOptions": {
+        "ISoundGenerationSelectorService": false,
+        "ISoundGenerationService": false
     }
 }
