#5-2 編集スキップを追加

--- a/KoeBook/appsettings.json
+++ b/KoeBook/appsettings.json
@@ -4,8 +4,8 @@
         "LocalSettingsFile": "LocalSettings.json"
     },
     "MockOptions": {
-        "IAnalyzerService": true,
-        "IEpubGenerateService": true,
+        "IAnalyzerService": false,
+        "IEpubGenerateService": false,
         "ISoundGenerationSelectorService": false,
         "ISoundGenerationService": false
     }
