#5-2 ダイアログのテーマを修正

--- a/KoeBook/KoeBook.csproj
+++ b/KoeBook/KoeBook.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Components\Dialog\DialogContentControl.xaml" />
+    <None Remove="Components\Dialog\SharedContentDialog.xaml" />
     <None Remove="Components\StateProgressBar.xaml" />
     <None Remove="Views\EditDetailsTab.xaml" />
   </ItemGroup>
@@ -43,6 +44,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Components\Dialog\SharedContentDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="Components\StateProgressBar.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
