HttpClientをDIするように修正

--- a/KoeBook/appsettings.json
+++ b/KoeBook/appsettings.json
@@ -5,8 +5,8 @@
     },
     "MockOptions": {
         "IAnalyzerService": true,
-        "IEpubGenerateService": true,
-        "ISoundGenerationSelectorService": true,
-        "ISoundGenerationService": true
+        "IEpubGenerateService": false,
+        "ISoundGenerationSelectorService": false,
+        "ISoundGenerationService": false
     }
 }
