--- a/Epub/KoeBook.Epub/KoeBook.Epub.csproj
+++ b/Epub/KoeBook.Epub/KoeBook.Epub.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="1.1.0" />
     <PackageReference Include="NAudio" Version="2.2.1" />
   </ItemGroup>
   
