--- a/Epub/KoeBook.Epub/KoeBook.Epub.csproj
+++ b/Epub/KoeBook.Epub/KoeBook.Epub.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="NAudio" Version="2.2.1" />
   </ItemGroup>
   
