--- a/KoeBook/appsettings.json
+++ b/KoeBook/appsettings.json
@@ -4,7 +4,7 @@
         "LocalSettingsFile": "LocalSettings.json"
     },
     "MockOptions": {
-        "IAnalyzerService": true,
+        "IAnalyzerService": false,
         "IEpubGenerateService": false,
         "ISoundGenerationSelectorService": false,
         "ISoundGenerationService": false
